# components

./: CHANGELOG.md  package.json
.github/: CODEOWNERS
guides/: schematics.md
src/cdk/table/: row.ts  table-module.ts  table.ts
src/components-examples/: BUILD.bazel
src/components-examples/cdk/schematics/: BUILD.bazel  index.ts
src/components-examples/cdk/schematics/schematics-drag-drop/: schematics-drag-drop-example.css  schematics-drag-drop-example.ts
src/components-examples/material/schematics/: BUILD.bazel  index.ts
src/components-examples/material/schematics/schematics-address-form/: schematics-address-form-example.ts
src/components-examples/material/schematics/schematics-dashboard/: schematics-dashboard-example.ts
src/components-examples/material/schematics/schematics-navigation/: schematics-navigation-example.html  schematics-navigation-example.ts
src/components-examples/material/schematics/schematics-table/: schematics-table-datasource.ts  schematics-table-example.html  schematics-table-example.ts
src/components-examples/material/schematics/schematics-tree/: schematics-tree-example.ts
src/demo-app/example/: example-list.ts
src/demo-app/table/: table-demo-module.ts  table-demo.html  table-demo.ts
src/demo-app/tabs/: tabs-demo.html  tabs-demo.ts
src/dev-app/: BUILD.bazel  theme.scss
src/dev-app/dev-app/: dev-app-layout.ts  routes.ts
src/dev-app/mdc-snack-bar/: BUILD.bazel  mdc-snack-bar-demo.ts
src/dev-app/mdc-snackbar/: BUILD.bazel  mdc-snackbar-demo-module.ts  mdc-snackbar-demo.ts
src/dev-app/schematics/: BUILD.bazel  schematics-demo-module.ts  schematics-demo.html  schematics-demo.ts
src/dev-app/table/: table-demo.html
src/lib/tabs/: _tabs-theme.scss  tab-group.html  tab-group.ts  tab-header.spec.ts  tab-header.ts  tab-label-wrapper.ts
src/material-examples/: public-api.ts
src/material-examples/cdk-table-basic/: cdk-table-basic-example.ts
src/material-examples/cdk-table-basic-flex/: cdk-table-basic-flex-example.ts
src/material-examples/table-basic/: table-basic-example.ts
src/material-examples/table-basic-flex/: table-basic-flex-example.ts
src/material-examples/table-dynamic-columns/: table-dynamic-columns-example.ts
src/material-examples/table-filtering/: table-filtering-example.ts
src/material-examples/table-footer-row/: table-footer-row-example.ts
src/material-examples/table-http/: table-http-example.ts
src/material-examples/table-native-only/: table-native-only-example.ts
src/material-examples/table-overview/: table-overview-example.ts
src/material-examples/table-pagination/: table-pagination-example.ts
src/material-examples/table-row-context/: table-row-context-example.ts
src/material-examples/table-selection/: table-selection-example.ts
src/material-examples/table-sorting/: table-sorting-example.ts
src/material-experimental/: config.bzl
src/material-experimental/mdc-snack-bar/: BUILD.bazel  _mdc-snack-bar.scss  module.ts  public-api.ts  simple-snack-bar.html  simple-snack-bar.scss  simple-snack-bar.ts  snack-bar-container.html  snack-bar-container.scss  snack-bar-container.ts  snack-bar.ts
src/material-experimental/mdc-snackbar/: BUILD.bazel  _mdc-snackbar.scss  module.ts  public-api.ts  simple-snackbar.html  simple-snackbar.scss  simple-snackbar.ts  snack-bar-container.html  snack-bar-container.scss  snack-bar-container.ts  snackbar.ts
src/material-experimental/mdc-theming/: BUILD.bazel  _all-theme.scss
src/material-experimental/mdc-typography/: BUILD.bazel  _all-typography.scss
src/material/autocomplete/: _autocomplete-theme.scss  _m2-autocomplete.scss  _m3-autocomplete.scss  autocomplete.scss
src/material/badge/: _badge-theme.scss  _m2-badge.scss  _m3-badge.scss  badge.scss
src/material/bottom-sheet/: _bottom-sheet-theme.scss  _m2-bottom-sheet.scss  _m3-bottom-sheet.scss  bottom-sheet-container.scss
src/material/button/: _button-theme.scss  _fab-theme.scss  _icon-button-theme.scss  _m2-button.scss  _m2-fab.scss  _m2-icon-button.scss  _m3-button.scss  _m3-fab.scss  _m3-icon-button.scss  button.scss  fab.scss  icon-button.scss  m2-button.scss
src/material/button-toggle/: _button-toggle-theme.scss  _m2-button-toggle.scss  _m3-button-toggle.scss  button-toggle.scss
src/material/card/: _card-theme.scss  _m2-card.scss  _m3-card.scss  card.scss
src/material/checkbox/: _checkbox-common.scss  _checkbox-theme.scss  _m2-checkbox.scss  _m3-checkbox.scss  checkbox.scss
src/material/chips/: _chips-theme.scss  _m3-chip.scss  chip.scss
src/material/core/: _core-theme.scss  _core.scss  _m3-app.scss
src/material/datepicker/: _datepicker-theme.scss  _m2-datepicker.scss  _m3-datepicker.scss  calendar-body.scss  calendar.scss  date-range-input.scss  datepicker-content.scss  datepicker-toggle.scss
src/material/dialog/: _dialog-theme.scss  _m2-dialog.scss  _m3-dialog.scss  dialog.scss
src/material/divider/: _divider-theme.scss  _m3-divider.scss  divider.scss
src/material/expansion/: _expansion-theme.scss  _m2-expansion.scss  _m3-expansion.scss  expansion-panel-header.scss  expansion-panel.scss
src/material/form-field/: _form-field-focus-overlay.scss  _form-field-native-select.scss  _form-field-subscript.scss  _form-field-theme.scss  _m2-form-field.scss  _m3-form-field.scss  _mdc-text-field-density-overrides.scss  _mdc-text-field-structure-overrides.scss  form-field.scss  (+1 more)
tools/: system-config-tmpl.js
tools/extract-tokens/: extract-tokens.ts
(+131 files in other folders)
