package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("//tools:defaults.bzl", "ng_module")

ng_module(
    name = "mdc-snackbar",
    srcs = glob(["**/*.ts"]),
    assets = [
        "mdc-snackbar-demo.html",
        ":mdc_snackbar_demo_scss",
    ],
    deps = [
        "//src/cdk/bidi",
        "//src/material-experimental/mdc-snackbar",
        "//src/material/button",
        "//src/material/checkbox",
        "//src/material/form-field",
        "//src/material/input",
        "//src/material/select",
        "@npm//@angular/forms",
        "@npm//@angular/router",
    ],
)

sass_binary(
    name = "mdc_snackbar_demo_scss",
    src = "mdc-snackbar-demo.scss",
)
