package(default_visibility = ["//visibility:public"])

load("//tools:defaults.bzl", "ng_module", "sass_binary", "sass_library")

ng_module(
    name = "mdc-snackbar",
    srcs = glob(
        ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    assets = [
        ":simple-snackbar_scss",
        ":snack_bar_container_scss",
    ] + glob(["**/*.html"]),
    module_name = "@angular/material-experimental/mdc-snackbar",
    deps = [
        "//src/material/core",
        "//src/material/snack-bar",
        "@npm//@angular/core",
        "@npm//material-components-web",
    ],
)

sass_library(
    name = "mdc_snackbar_scss_lib",
    srcs = glob(["**/_*.scss"]),
    deps = [
        "//src/material-experimental/mdc-helpers:mdc_helpers_scss_lib",
        "//src/material/core:core_scss_lib",
    ],
)

sass_binary(
    name = "simple-snackbar_scss",
    src = "simple-snackbar.scss",
)

sass_binary(
    name = "snack_bar_container_scss",
    src = "snack-bar-container.scss",
    include_paths = [
        "external/npm/node_modules",
    ],
    deps = [
        "//src/material-experimental/mdc-helpers:mdc_helpers_scss_lib",
        "//src/material-experimental/mdc-helpers:mdc_scss_deps_lib",
    ],
)
