package(default_visibility = ["//visibility:public"])

load("//tools:defaults.bzl", "ng_module")

ng_module(
    name = "schematics",
    srcs = glob(["**/*.ts"]),
    assets = glob([
        "**/*.html",
        "**/*.css",
    ]),
    module_name = "@angular/components-examples/cdk/schematics",
    deps = [
        "//src/cdk/drag-drop",
    ],
)

filegroup(
    name = "source-files",
    srcs = glob([
        "**/*.html",
        "**/*.css",
        "**/*.ts",
    ]),
)
