package(default_visibility = ["//visibility:public"])

load("//tools:defaults.bzl", "ng_module")

ng_module(
    name = "schematics",
    srcs = glob(["**/*.ts"]),
    assets = glob([
        "**/*.html",
        "**/*.css",
    ]),
    module_name = "@angular/components-examples/material/schematics",
    deps = [
        "//src/cdk/layout",
        "//src/material/button",
        "//src/material/card",
        "//src/material/grid-list",
        "//src/material/icon",
        "//src/material/input",
        "//src/material/list",
        "//src/material/menu",
        "//src/material/paginator",
        "//src/material/radio",
        "//src/material/select",
        "//src/material/sidenav",
        "//src/material/sort",
        "//src/material/table",
        "//src/material/toolbar",
        "//src/material/tree",
    ],
)

filegroup(
    name = "source-files",
    srcs = glob([
        "**/*.html",
        "**/*.css",
        "**/*.ts",
    ]),
)
